# otus-cpp-pro

./: CMakeLists.txt  CommandBulk_8h.html  CommandBulk_8h__dep__incl.map  CommandBulk_8h__dep__incl.md5  CommandBulk_8h__incl.map  CommandBulk_8h__incl.md5  CommandBulk_8h_source.html  Command_8h.html  Command_8h__dep__incl.map  Command_8h__dep__incl.md5  Command_8h__incl.map  Command_8h__incl.md5  Command_8h_source.html  CompositeShape_8cpp.html  CompositeShape_8cpp__incl.map  CompositeShape_8cpp__incl.md5  CompositeShape_8h.html  CompositeShape_8h__dep__incl.map  CompositeShape_8h__dep__incl.md5  CompositeShape_8h__incl.map  CompositeShape_8h__incl.md5  CompositeShape_8h_source.html  Document_8cpp.html  Document_8cpp__incl.map  Document_8cpp__incl.md5  Document_8h.html  Document_8h__dep__incl.map  Document_8h__dep__incl.md5  Document_8h__incl.map  Document_8h__incl.md5  Document_8h_source.html  DuplicateFinder_8cpp.html  DuplicateFinder_8cpp__incl.map  DuplicateFinder_8cpp__incl.md5  DuplicateFinder_8h.html  DuplicateFinder_8h__dep__incl.map  DuplicateFinder_8h__dep__incl.md5  DuplicateFinder_8h__incl.map  DuplicateFinder_8h__incl.md5  DuplicateFinder_8h_source.html  (+507 more)
.github/workflows/: ci.yml
docs/: CMakeLists.txt
homework1/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  main.cpp  tst_HelloWorld.cpp
homework10/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
homework11/: CMakeLists.txt  Server.cpp  Server.h  SimpleDatabase.cpp  SimpleDatabase.h  main.cpp
homework12/: CMakeLists.txt  MapReduce.cpp  MapReduce.h  main.cpp
homework13/: CMakeLists.txt  Helpers.cpp  Helpers.h  IBinaryClassifier.h  LogregClassifier.cpp  LogregClassifier.h  main.cpp
homework2/: CMakeLists.txt  IPv4Address.cpp  IPv4Address.h  IPv4Filter.cpp  IPv4Filter.h  main.cpp
homework2/tests/: CMakeLists.txt  tst_IPv4Address.cpp  tst_IPv4Filter.cpp
homework3/: CMakeLists.txt  ForwardList.h  ReserveAllocator.h  main.cpp
homework4/: CMakeLists.txt  main.cpp  print_ip.h
homework5/: CMakeLists.txt  CompositeShape.cpp  CompositeShape.h  Document.cpp  Document.h  IController.h  IRenderer.h  IShape.h  IView.h  Line.cpp  Line.h  Observable.cpp  Observable.h  Point.h  Rectangle.cpp  Rectangle.h  main.cpp
homework6/: CMakeLists.txt  Matrix.h  main.cpp
homework7/: CMakeLists.txt  Command.h  CommandBulk.h  IVisitable.h  IVisitor.h  Parser.cpp  Parser.h  PrintVisitor.cpp  PrintVisitor.h  SaveToFileVisitor.cpp  SaveToFileVisitor.h  main.cpp
homework7/tests/: CMakeLists.txt  tst_Parser.cpp  tst_PrintVisitor.cpp  tst_SaveToFileVisitor.cpp
homework8/: CMakeLists.txt  DuplicateFinder.cpp  DuplicateFinder.h  README.md  main.cpp
homework9/: CMakeLists.txt  async.cpp  async.h  main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  enums_0.js  enumvalues_0.js  (+67 more)
